--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <!-- TradingView Widget END -->
 
     </div>
+        <script type="text/javascript" src="scripts/jquery.js"></script>
     <script type="text/javascript" src="scripts/scripts.js"></script>
 </body>
 
